--- a/.gitignore
+++ b/.gitignore
@@ -23,16 +23,22 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+.pnpm-debug.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
+.env
 
 # vercel
 .vercel
 
 # netlify
 .netlify
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# genkit
+.genkit/
+.genkit-cache.json
