--- a/.gitignore
+++ b/.gitignore
@@ -23,17 +23,16 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
-.env*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 .env
 
 # vercel
 .vercel
-
-# netlify
-.netlify
 
 # typescript
 *.tsbuildinfo
