O erro que você está vendo, relacionado à inicialização do Firebase, oco

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,27 @@
-# Este é um arquivo de exemplo.
-# Para desenvolvimento local, copie este arquivo para .env.local e preencha os valores.
-# Para produção (Netlify), configure estas variáveis no painel do seu site.
-# A CHAVE é o nome antes do '=', o VALOR é o que vem depois.
+# Variáveis de Ambiente do Firebase (Acessíveis no Cliente)
+# Estes valores são obtidos no painel do seu projeto Firebase.
+# Vá para Configurações do Projeto > Geral > Seus Apps > Configuração de SDK.
+NEXT_PUBLIC_FIREBASE_API_KEY=
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+NEXT_PUBLIC_FIREBASE_APP_ID=
 
-# Chave da API do Google AI Studio
-GEMINI_API_KEY=
-
-# Configuração do Firebase (NÃO use o prefixo NEXT_PUBLIC_)
-FB_AK=
-FB_AD=
-FB_PID=
-FB_SB=
-FB_MSID=
-FB_APPID=
-
-# Conta de Serviço do Firebase Admin (cole o JSON completo em uma única linha)
+# Chave da Conta de Serviço do Firebase Admin (APENAS PARA O SERVIDOR)
+# Gerada no Firebase Console > Configurações > Contas de Serviço > Gerar nova chave privada.
+# O conteúdo completo do arquivo JSON deve ser colado aqui.
+# Esta variável NÃO deve ter o prefixo NEXT_PUBLIC_.
 FB_SA=
 
-# URLs de Pagamento da sua plataforma
+# Chave da API da Gemini (APENAS PARA O SERVIDOR)
+# Obtida no Google AI Studio.
+# Esta variável NÃO deve ter o prefixo NEXT_PUBLIC_.
+GEMINI_API_KEY=
+
+# Links de Pagamento
+# Estes são os links de checkout do seu provedor de pagamento (Stripe, Mercado Pago, etc.)
+# Estas variáveis NÃO devem ter o prefixo NEXT_PUBLIC_.
 PAYMENT_MONTHLY=
 PAYMENT_QUARTERLY=
 PAYMENT_ANNUAL=
